--- a/human.css
+++ b/human.css
@@ -167,7 +167,7 @@ input[value=Cancel] {
 	background-color: white;
 	border: none;
 	box-sizing: border-box;
-	background-image: url(https://journals.hioa.no/public/journals/15/homeHeaderTitleImage_en_US.png);
+	background-image: url(hrer_header_banner.png);
 	background-repeat: no-repeat;
 	/* background-position: 50%; */
 	background-size: 100% auto;
