--- a/human.css
+++ b/human.css
@@ -5,7 +5,7 @@
  * Copyright (c) 2003-2014 John Willinsky
  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
  *
- * njsr theme.
+ * human theme.
  *
  */
 
